--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@
 /html/download_counts.json
 /html/recipes.json
 /html/updates.rss
+/html-stable/.last-build-duration
+/html-stable/archive.json
+/html-stable/build-status.json
+/html-stable/download_counts.json
+/html-stable/recipes.json
+/html-stable/updates.rss
 /packages-stable/*
 /packages/*
 /process_log.pid
