Migrate process_log to support stable.
In the new world stable logs to a different directory than true melpa.
This updates process_log to support that.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /.cask
 /.ecukes-failing-scenarios
 /config.mk
+/download_log_stable.db
+/download_log_stable.json.gz
 /download_log.db
 /download_log.json.gz
 /elpa
